 - allow user to delete files awaiting cron ingestion, e.g. bad format
 - updated to ajaxCRUD v7.91
 - moved html headers on view.php to lower in the page so as to not conflict with ajaxCRUD's need to do a few things first; this fixes the bug that required a reload of the page to see user-initiated changes to the record information

*** TO DO: 
    * increase upload filesize limit - this must be done in php.ini, can't do it in the script. 
    * I have a note that we should notify on failed upload, but it looks to me like we already do that. Need examples of failed cases.  
    * it would be nice to have a "remove where conditions" button on view.php after the user invokes the advanced search

v. 1.0.7 - 20 November 2012
 - added GetTableNames() script to scripts.php - return an array of human-friendly names, keyed to mysql table_name
 - fixed bug in settings.php: can now turn off columns in print view (could previously only turn them ON)
 - show human-friendly names in settings.php
 - fixed bug so print settings take effect in print.php
 - if a user clicks the 'edit settings' button on the main page, go straight to those settings or offer them some choices if settings don't exist

v. 1.0.6 - 06 November 2012
 - added backticks to a mysql table call in ajaxcrud.class.php 
 - allowed for user to enter non-allowed characters in upload.php table name (non allowed characters will convert to underscores)

v. 1.0.5 - 29 October 2012
 - change line 180 in prep_file.php to .= instead of = ; this allows for multiple items with the same call number; previous versions disappeared subsequent items with duplicate call numbers
 - update innreach_check.php: call DOM parser with $path_main instead of ./ in the path -- works more reliably in some environments 
 - updated upload.php to fail verbosely when file is empty
 - changed innreach_check.php so that the oldest file is checked first against the InnReach catalog